--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <h1 class="card__body-title">JakesterDevs</h1>
             <h2 class="card__body-keywords">| HTML5 | CSS3 | JavaScript | LUA |</h2>
             <p class="card__body-presentation">
-              Hello, I am a web developer,roblox game creator, and a graphic designer. I have commissions open, which you can contact me with the socials below.
+              Hello, I am a web developer, roblox game creator, and a discord bot developer. I have commissions open, which you can contact me via my socials.
             </p>
           </section>
           <footer class="card__footer">
